# AOS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  trace_stack
include/arch/memory/: area_frame_allocator.h
include/arch/x86_64/: cpu.h  cpu_flags.h  gdt.h  interrupt.h  intrinsic.h  msr_flags.h  multiboot2.h  register_flags.h  tss.h  vga_text.h  x86.h
include/context/: auxv.h  elf.h  process.h  sched.h  syscalls.h  syscalls_64.h  thread.h
include/drivers/: acpi.h  apic.h  ata.h  cmos.h  device.h  keyboard.h  pic8259.h  port.h  timer.h  vga_text.h
include/drivers/block_device/: ata.h
include/drivers/char_device/: keyboard.h
include/fs/: stat.h  vfs.h
include/fs/ext2/: ext2.h
include/lib/: bitmap.h  bitops.h  debug.h  errno.h  hash.h  list.h  queue.h  stddef.h  string.h  time.h  types.h
include/memory/: area_frame_allocator.h  frame_allocator.h  kmalloc.h  layout.h  memory.h  mm.h  page_table.h  pmm.h  virtual_memory.h  vmem.h  vmm.h  x86.h
include/sync/: mutex.h  semaphore.h  spin_lock.h
include/syscall/: syscalls.h  syscalls_64.h
src/arch/memory/: area_frame_allocator.cpp
src/arch/x86_64/: ap_trampoline.asm  cpu.c  gdt.c  grub.cfg  interrupt.c  intr_vectors.asm  kernel_entry.c  kernel_entry.cpp  linker.ld  multiboot2.c  multiboot2.cpp  multiboot2_boot.asm  multiboot2_boot32.asm  multiboot2_boot64.asm  tss.c  vga_text.c
src/context/: elf.c  process.c  sched.c  syscall_entry.asm  syscalls.c  thread.c
src/drivers/: acpi.c  apic.c  ata.c  ata_pio.c  cmos.c  device.c  keyboard.c  pic8259.c  timer8254.c  vga_text.c
src/drivers/block_device/: ata.c
src/drivers/char_device/: keyboard.c
src/fs/: lookup.c  mount.c  offset.c  open.c  path.c  read.c  readdir.c  simplefs.c  stat.c  trunc.c  vfs.c
src/fs/ext2/: ext2.c
src/lib/: bitmap.c  debug.c  hash.c  list.c  queue.c  string.c
src/memory/: area_frame_allocator.c  frame_allocator.c  kmalloc.c  memory.c  mm.c  page_table.c  pmm.c  virtual_memory.c  vmem.c  vmm.c  vmops_anon.c
src/sync/: mutex.c  semaphore.c  spin_lock.c
src/syscall/context/: sys_exit.c  sys_id.c
src/syscall/fs/: sys_access.c  sys_fop.c  sys_readwrite.c
src/syscall/memory/: sys_mmap.c
src/syscall/sys/: sys_arch.c  sys_brk.c  sys_uname.c
